--- a/.github/workflows/mikecitest.yaml
+++ b/.github/workflows/mikecitest.yaml
@@ -1,10 +1,10 @@
  
- name: Github Actions Demo
- on: [ push ]
- jobs:
-  Test:
-      runs-on: ubuntu-latest
-      steps:
-        -uses: actions/checkout@v2
-        -run: echo " The job was automatically triggered by a ${{ github.event.name }} event."
-        -run: python main.py
+name: Git Actions Demo
+on: [push]
+jobs:
+Explore-GitHub-Actions:
+   runs-on: windows-latest
+   steps:
+     - uses: actions/checkout@v2
+     - run: echo "This job was automatically triggered by a ${{ github.event_name }} event"
+     - run: python main.py
